# prodigy

./: .clang-tidy  .clangd  .cmake-format.json  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  TODO.txt  cpm-package-lock.cmake  renovate.json
.github/workflows/: ci.yaml
cmake/: AddCatchTest.cmake  CPM.cmake  GitHash.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/chess/: CMakeLists.txt  chess.cppm  color.cppm  square.cppm
src/chess/tests/: CMakeLists.txt  color.cpp  square.cpp
src/core/: CMakeLists.txt  bitboard.cppm  board.cppm  castling_rights.cppm  color.cppm  color_traits.cppm  containers.cppm  core.cppm  direction.cppm  fen.cppm  macros.h  move.cppm  piece_type.cppm  ply.cppm  position.cppm  square.cppm  visitor.cppm
src/core/tests/: CMakeLists.txt  bitboard.cpp  board.cpp  castling_rights.cpp  color.cpp  fen.cpp  square.cpp
src/engine/: CMakeLists.txt  engine.cpp  engine.cppm  mcts_strategy.cppm  strategy.cppm
src/engine/tests/: CMakeLists.txt  engine.cpp  mcts_strategy.cpp
src/evaluation/: CMakeLists.txt  evaluation.cppm  evaluator.cppm  phase.cppm  piece_values.cppm  psqt.cppm
src/evaluation/tests/: CMakeLists.txt  evaluator.cpp  piece_values.cpp  psqt.cpp
src/mcts/: CMakeLists.txt  algorithm.cppm  arena.cpp  arena.cppm  expand.cppm  mcts.cppm  rollout_policy.cppm  searcher.cppm  simulation_count.cppm  simulation_reward.cppm  simulation_statistics.cpp  simulation_statistics.cppm  tree.cpp  tree.cppm  tree_policy.cpp  tree_policy.cppm
src/mcts/tests/: CMakeLists.txt  algorithm.cpp  arena.cpp  rollout_policy.cpp  searcher.cpp  simulation_statistics.cpp  tree.cpp  tree_policy.cpp
src/move_generator/: CMakeLists.txt  color_traits.cppm  dispatch.cppm  lookup.cppm  magic_bitboards.cpp  magic_bitboards.cppm  move_generator.cpp  move_generator.cppm  node.cppm  node_context.cppm  visitor.cppm  walk.cppm
src/move_generator/perft/: CMakeLists.txt  perft.cpp  perft.cppm
src/move_generator/perft/tests/: CMakeLists.txt  perft.cpp
src/move_generator/tests/: CMakeLists.txt  dispatch.cpp  move_generator.cpp  node.cpp  node_context.cpp  visitor.cpp  walk.cpp
src/uci/: CMakeLists.txt  engine.cpp  engine.cppm  go.cppm  metadata.h.in  move.cpp  move.cppm  parser.cpp  parser.cppm  uci.cppm
src/uci/tests/: CMakeLists.txt  engine.cpp  move.cpp  parser.cpp
